fixed overflow articles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,12 @@ p {
 
 footer {
   background: gray;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer div {
+  max-width: 60%;
 }
 
 footer li {
@@ -397,3 +403,8 @@ footer li::before {
   content: "• ";
   color: black;
 }
+
+/* footer img {
+  max-width: 100%;
+  height: auto;
+} */
